# rng-tsan-min-repro

./: Cargo.toml  README.md  getrandom-issue  test.out  tsan
src/: lib.rs
