[package]
name = "rng-tsan-min-repro"
version = "0.1.0"
authors = ["David Kellum <dek-oss@gravitext.com>"]
edition = "2018"
description="Minimized reproduction of a thread sanitizer issue with getrandom 0.1.7"
license = "MIT/Apache-2.0"

[dependencies]
rand_pcg = "0.2.0"
rand_core = "0.5"
getrandom = "0.1.7"
lazy_static = "1.3.0"
